# cmake-template-project

./: CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  Main.cpp
src/: CMakeLists.txt  Singleton.cpp  Singleton.hpp
tests/: CMakeLists.txt  tests.cpp
